config/6-ratings-egress/svc-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: istio-system
spec:
  ports:
    - protocol: TCP
      port: 3306
      name: tcp-3306
