config/6-ratings-egress/dr-ratings-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ratings-to-egress
  namespace: back
spec:
  exportTo:
  - .
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: mysql-external
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: mysql.istio-system.svc.cluster.local
